--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -27,6 +27,12 @@ body{
  
 }
 
+footer{
+  color: white;
+
+
+}
+
 article,
 aside,
 details,
@@ -665,7 +671,7 @@ pre tt:after {
 
 /* Color/shape of burger icon bars */
 .bm-burger-bars {
-  background: #373a47;
+  background: white;
 }
 
 /* Position and sizing of clickable cross button */
