--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -2,10 +2,14 @@ html {
   font-family: 'Times New Roman', Times, serif, sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+
 }
 
 body{
   margin: 0;
+
+
+  
 }
 
 .sub-page {
@@ -29,6 +33,11 @@ body{
 
 footer{
   color: white;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;  
+ 
 
 
 }
@@ -215,6 +224,8 @@ html {
   font: 112.5%/1.45em georgia, serif;
   box-sizing: border-box;
   overflow-y: scroll;
+ 
+ 
 }
 * {
   box-sizing: inherit;
@@ -235,6 +246,7 @@ body {
   -ms-font-feature-settings: "kern", "liga", "clig", "calt";
   -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
   font-feature-settings: "kern", "liga", "clig", "calt";
+
 }
 img {
   max-width: 100%;
