--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -36,7 +36,7 @@ footer{
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 2.5rem;  
+  height: 5rem;  
  
 
 
@@ -681,7 +681,7 @@ pre tt:after {
   width: 36px;
   height: 30px;
   left: 36px;
-  top: 36px;
+  top: 50px;
 }
 
 /* Color/shape of burger icon bars */
@@ -703,8 +703,8 @@ pre tt:after {
 /* General sidebar styles */
 .bm-menu {
   background: #373a47;
-  padding: 2.5em 1.5em 0;
-  font-size: 1.15em;
+  padding: 2.5em .5em 0;
+  font-size: 1.5em;
 }
 
 /* Morph shape necessary with bubble or elastic */
