--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -9,6 +9,16 @@
   #nav-desktop {
     display:none;
   }
+  #tagline {
+
+    font-size: 20px;
+  }
+
+  #phone {
+   
+    font-size: 15px;
+  }
+ 
 
 }
 
@@ -20,12 +30,17 @@
     display: none;
   }
 
+
 }
 @media only screen and (max-width: 480px) {
   html {
     font-size: 100%;
   }  
+  
+
 }
+
+
 
 
 
@@ -47,6 +62,10 @@ html {
   box-sizing: inherit;
 }
 
+#App{
+  margin-bottom: -50px;
+
+}
 .sub-page {
  
    background: white;
@@ -59,7 +78,10 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-height:100vh;
- 
+}
+
+#home footer{
+  color: white;
 }
 
 #hero{
@@ -77,21 +99,11 @@ html {
 .headline{
   text-align: center;
   color: white;
-  font-size: 4vw;
+  font-size: 2.25rem;
   font-weight: normal;
   margin-top: -15px;
 
 }
-
-
-
-#footer{
-  /* position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 2.5rem;     */
-}
-
 
 
 article,
