--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -80,10 +80,6 @@
 
 }
 
-
-
-
-
 body{
   margin: 0; 
 }
@@ -95,6 +91,7 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
+
 
 *, *::before, *::after {
   margin: 0;
@@ -136,7 +133,15 @@ nav{
 }
 
 footer{
-  margin-top: 500px;
+  position: static;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #3C3C3C;
+  color: white;
+  text-align: center; 
+  
+
   
 
 }
@@ -206,6 +211,7 @@ a {
 a:active,
 a:hover {
   outline-width: 0;
+  
 }
 abbr[title] {
   border-bottom: none;
@@ -355,6 +361,9 @@ html {
 }
 * {
   box-sizing: inherit;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important; 
+    -webkit-focus-ring-color: rgba(255, 255, 255, 0) !important; 
+    outline: none !important;
 }
 *:before {
   box-sizing: inherit;
@@ -782,7 +791,7 @@ pre tt:after {
 }
 
 
-
+/* Mobile menu styles */
 
 .bm-burger-button {
   position: fixed;
@@ -805,7 +814,7 @@ pre tt:after {
 
 /* Color/shape of close button cross */
 .bm-cross {
-  background: #bdc3c7;
+  background: white;
 }
 
 /* General sidebar styles */
@@ -815,20 +824,26 @@ pre tt:after {
   font-size: 1.5em;
 }
 
-/* Morph shape necessary with bubble or elastic */
-.bm-morph-shape {
-  fill: #373a47;
+a {
+  padding: 10px;
 }
+
+
+/* Morph shape necessary with bubble or elastic */
+/* .bm-morph-shape {
+  fill: #373a47;
+} */
 
 /* Wrapper for item list */
-.bm-item-list {
+/* .bm-item-list {
   color: #b8b7ad;
-}
+  
+} */
 
 /* Styling of overlay */
-.bm-overlay {
+/* .bm-overlay {
   background: rgba(0, 0, 0, 0.3);
-}
+} */
 
 #logo{
   margin-bottom: 15px;
