--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -797,7 +797,7 @@ pre tt:after {
   position: fixed;
   width: 36px;
   height: 30px;
-  left: 36px;
+  right: 36px;
   top: 50px;
 }
 
@@ -854,9 +854,15 @@ a {
 
 #header-logo{
   margin-left: 30px;
+  margin-top: 15px;
   padding: 10px;
   height: 50px;
   width: 250px;
  
 }
+
+.single-space{
+  margin-bottom: 10px;
+}
+
 
